# sumatra-cpp-mpi

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  simple_example.cpp
